make password field required. fix color contrast for required indocator text

--- a/frontend/src/assets/theme/forms.scss
+++ b/frontend/src/assets/theme/forms.scss
@@ -132,9 +132,9 @@ button.v4-form-input {
 }
 
 span.req {
-   margin-left: 5px;
-   color: $uva-grey;
-   font-size: 0.8em;
+   margin-left: 0.5rem;
+   color: $uva-grey-B;
+   font-size: 0.9em;
 }
 
 i.req {
@@ -163,7 +163,7 @@ div.sort .formkit-wrapper {
 .v4-form-help {
    margin: 5px 0;
    font-size: 0.9em;
-   color: $uva-grey;
+   color: $uva-grey-B;
 }
 
 .v4-form-invalid {
